syntax = "proto3";

package awakari.api.admin;

option go_package = "api/grpc/admin";

import "api/grpc/admin/subject.proto";
import "google/protobuf/timestamp.proto";

service Service {
  rpc SetLimits(SetLimitsRequest) returns (SetLimitsResponse);
}

message SetLimitsRequest {
  string groupId = 1;
  string userId = 2;
  Subject subj = 3;
  int64 count = 4;
  google.protobuf.Timestamp expires = 5;
}

message SetLimitsResponse {
}
